2013-09-26  Anton Kolesov <akolesov@synopsys.com>

	* arc-versions.sh: Fix double usage of same variable name for different
	purposes, leading to incorrect behaviour.

2013-09-16  Anton Kolesov <akolesov@synopsys.com>

	* build-all.sh: Add option --[no-]strip to strip host binaries from symbols.
	* build-elf32.sh: Use HOST_INSTALL env variable to define which target to
	use to install on host. Should be either `install' or `install-strip'.
	* build-uclibc.sh: Likewise.

2013-09-11  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Correct configuration for GDB testsuite
	on nSIM.

2013-09-10  Anton Kolesov <akolesov@synopsys.com>

	* dejagnu/baseboard/arc-nsim.exp: Do not use status wrapper (testglue) for
	Dejagnu tests.
	* dejagnu/nsim-extra.exp: Remove custom copy of gdb_comm_load() function.

2013-09-09	Anton Kolesov <akolesov@synopsys.com>

	* README.md: Mention that Git tags should be used to obtain stable
	releases.

2013-09-04	Anton Kolesov <akolesov@synopsys.com>

	* arc-external.sh: New file to download external dependencies.
	* build-all.sh: New option --[no-]external-download.

2013-09-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Only use Linux if --uclibc is set (new
	argument)
	* build-all.sh: Pass uclibc argument to arc-versions.sh

2013-09-03  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Only check for Linux directory with if uClibc is
	being built.

2013-08-29  Vineet Gupta <vgupta@synopsys.com>

	* arc-versions.sh: Update uClibc branch name to new naming convention.

2013-08-24  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Eliminate dependency on bash extensions when
	testing for pre-set environment variables.

2013-08-23  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Move use of all relevant env variables to after
	define-release.sh.

2013-08-20  Simon Cook  <simon.cook@embecosm.com>
